Fixed bug where "zoom to tp" buttons overflowed fixed height div into barogram in narrow displays Cleaned up html.  Removed deprecated "<br clear=all>" and replaced with css. Removed deprecated "autocomplete=off". Autocompleted unit preference is now read in "onload", and unit conversion constant set there. Moved "load igc file" to top centre

--- a/igcviewer.css
+++ b/igcviewer.css
@@ -27,12 +27,8 @@ h2 {
 
 #map {
     width: 100%;
-    height: calc(100% - 115px);
+    height: 85vh;
     margin-bottom: 15px;
-}
-
-#slider {
-    height: 100px;
 }
 
 #slider label {
@@ -46,15 +42,14 @@ h2 {
 }
 
 #mapWrapper, #barogram {
-    max-height: 110vw;
     margin-top: 30px;
     margin-bottom: 30px;
     margin-left: auto;
     margin-right: auto;
 }
 
-#mapWrapper {
-   height: 90vh;
+#barogram, #map  {
+   max-height: 110vw;
 }
 
 #barogram {
@@ -69,6 +64,9 @@ h2 {
     white-space: nowrap;
 }
 
+  #declaration {
+    float: right;
+    }
 
 @media print, screen and (max-width: 1100px) {
  div.halfwidth   {
@@ -82,12 +80,14 @@ h2 {
         float:right;
     }
     
-    #mapWrapper, #barogram {
+    #mapWrapper {
         position: relative;
     }
     
+    
     #barogram {
         height: calc(90vh - 130px);
+        position: relative;
     }
     
    button,  .inbutton  {
@@ -121,16 +121,14 @@ h2 {
     
     #mapWrapper {
         margin-left: 30px;
+        float: left;
     }
 
     #barogram {
-        right: 0px;
         height: 90vh;
         position: absolute;
-    }
-    
-    #declaration {
-    float:right;
+        right: 0px;
+        clear: both;
     }
 }
 
@@ -142,11 +140,12 @@ h2 {
 }
 
 #igcFileDisplay {
+    clear: both;
     display: none;
 }
 
 table#headerInfo {
-    border-spacing: 1em 0;
+    border-spacing: 0.1em ;
 }
 
 #task {
@@ -165,6 +164,7 @@ display: none;
 
 #flightInfo  {
    display: none;
+   margin-bottom: 20px;
 }
 
 @-ms-viewport  {
